2.0.2 (2011-02-13)
   * Use tempfile.mkstemp instead of tempfile.mktemp
     Reported by: Dennis Stam (SARA)
     Author: Bas van der Vlies

2.0.1 (2011-02-12)
   * An email address can match multiple trac accounts, closes #218
     Author: Konstantin Ryabitsev <icon add mricon dot com>

   * Added check to detect valid users when smtp_default_domain in 
     trac.ini is set, closes #219
     Author: sto add iti dot upv dot es
     Applied by: Bas van der Vlies with some minor changes

   * Support for parentdir. Can be used to avoid sections for each project
     or if all projects have a common parent directory, you can leave out
     the project directory setting for each project, eg:
      * parentdir: /data/trac/oss/projects

     If an section defines a project directory then this can NOT be overridden 
     by the parendir declaration. 

     This closes #217

     Author: sto add iti dot upv dot es
     Applied by: Bas van der Vlies with some minor changes

   * email2trac: Used the wrong code to check number of ticket changes, 
     closes #223.
     Author: stas dot agarkov add gmail dot com
     Applied by: Bas van der Vlies

   * email2trac: An enhancement to "update-by-subject", closes #188 Features: 
      - Does a better job parsing out all the permutations of "Re: FW: Re: AW: Subject" 
      - Modifies the subject to drop the prefixes 
     Author: Konstantin Ryabitsev <icon add mricon dot com>
     Applied by: Bas van der Vlies

   * When platform is Windows and log_type is not set, use 'eventlog' as default log_type 
     instead of 'syslog', closes #225
     Reported by: jkreider add clarkinc dot biz
     Author: Bas van der Vlies

   * Applied a patch so we allow more ticket fields to be used for inline properties, eg:
       - @custom_reports: vu
     closes #227
     Author: thomas dot moschny add gmx dot de 
     Applied by: Bas van der Vlies

   * Fixed some bugs in function update_ticket_fields: